# bluesky-adaptive

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  coverage.ini  github_deploy_key_bluesky_bluesky_adaptive.enc  pyproject.toml  requirements-agents.txt  requirements-dev.txt  requirements-tsuchinoko.txt  requirements.txt  setup.cfg  setup.py  test_scipy_rec.py
.github/workflows/: black.yml  docs.yml  flake8.yml  isort.yml  pre-commit.yml  python-publish.yml  tests.yml
bluesky_adaptive/: _version.py  agents.py  on_stop.py  per_event.py  per_start.py  recommendations.py  scipy_agents.py  scipy_reccomendations.py  typing.py  utils.py
bluesky_adaptive/adjudicators/: README-ADJUDICATORS.md  base.py  msg.py
bluesky_adaptive/agents/: base.py  botorch.py  simple.py  sklearn.py  tsuchinoko.py
bluesky_adaptive/server/: __init__.py  comms.py  ioc_server.py  logging_setup.py  server.py  server_api.py  server_resources.py  shared_ns.py  types.py  utils.py  worker.py
bluesky_adaptive/server/demo/: adjudicator_sandbox.py  agent_sandbox.py  agent_sim.py
bluesky_adaptive/tests/: README.md  conftest.py  docker-compose.yml  test_adjudicators.py  test_agents.py  test_botorch_agents.py  test_communication.py  test_examples.py  test_kafka.py  test_per_event.py  test_per_start.py  test_scipy_rec.py  test_server.py  test_sklearn_agents.py  test_tsuchinoko_agents.py
bluesky_adaptive/tests/podman/: docker-compose.yml  tiled_client_config.yml
bluesky_adaptive/utils/: __init__.py  offline.py
docker/: README.md  docker-compose.yml
docker/http-server/: Dockerfile
docker/queue-monitor/: Dockerfile  entrypoint.sh  local_display.sh
docker/queue-server/: 16-plans.py  Dockerfile
docs/: Makefile
docs/source/: conf.py  distributed.rst  examples.rst  index.rst  installation.rst  release-history.rst  usage.rst
docs/source/explanations/: adaptiveness.rst  axes-of-adaptive.md  distributed.md  index.rst  lock-step.md  service.md
docs/source/how-to/: dev-agent-brains.md  dev-agent-comms.md  extend-my-tool.md  index.rst  use-service.md
docs/source/reference/: agent-api.md  distributed.rst  example-agents.md  index.rst  lock-step.rst  tsuchinoko-agent.md
docs/source/reference/api_gen/: bluesky_adaptive.on_stop.recommender_factory.rst  bluesky_adaptive.per_event.adaptive_plan.rst  bluesky_adaptive.per_event.recommender_factory.rst  bluesky_adaptive.per_start.adaptive_plan.rst  bluesky_adaptive.per_start.recommender_factory.rst
docs/source/tutorials/: async.md  getting-started.md  index.rst  lockstep.md
